<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_gray"
    tools:context=".telas.LoginActivity">

    <ScrollView
        android:padding="@dimen/distancia_padrao"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginTop="90dp"
                android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="150sp">
            </ImageView>

            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="E-mail"
                    android:textColor="@color/dark_blue"
                    android:textAlignment="textStart"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="start" />

                <EditText
                    android:hint="@string/txtEmail"
                    android:id="@+id/etLoginEmail"
                    android:shadowColor="@color/bg_color_gray"
                    android:shadowDx="1.2"
                    android:shadowDy="1.2"
                    android:shadowRadius="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/edittext_login_style"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="Senha"
                    android:textColor="@color/dark_blue"
                    android:textAlignment="textStart"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="start" />

                <EditText
                    android:hint="@string/txtSenha"
                    android:id="@+id/etLoginSenha"
                    android:inputType="textPassword"
                    android:shadowColor="@color/bg_color_gray"
                    android:shadowDx="1.2"
                    android:shadowDy="1.2"
                    android:shadowRadius="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/edittext_login_style"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:text="fazer login"
                android:layout_marginTop="32dp"
                android:background="@drawable/blue_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/esqueci_a_senha"
                    android:textAlignment="textStart"
                    android:textColor="@color/dark_blue"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/sem_conta"
                    android:textAlignment="textEnd"
                    android:textColor="@color/dark_blue"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="V. 1.0.1 BETA"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="RtlCompat" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>