<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_gray"
    tools:context=".telas.CadastroActivity">

    <ScrollView
        android:padding="@dimen/distancia_padraoLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="150sp">
            </ImageView>

            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_marginLeft="32px"
                    android:text="Nome"
                    android:textColor="@color/gray_et_top"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="start" />

                <EditText
                    android:hint="@string/txtNome"
                    android:id="@+id/etCadastroNome"
                    android:shadowColor="@color/bg_color_gray"
                    android:shadowDx="1.2"
                    android:shadowDy="1.2"
                    android:shadowRadius="1.5"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/edittext_login_style"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="E-mail"
                    android:textColor="@color/gray_et_top"
                    android:textAlignment="textStart"
                    android:layout_marginLeft="32px"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:gravity="start" />

                <EditText
                    android:hint="@string/txtEmail"
                    android:id="@+id/etCadastroEmail"
                    android:inputType="textPassword"

                    android:padding="8dp"
                    android:shadowRadius="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/edittext_login_style"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_marginLeft="32px"
                    android:text="Senha"
                    android:textColor="@color/gray_et_top"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="start" />

                <EditText
                    android:hint="@string/txtSenha"
                    android:id="@+id/etLoginEmail"
                    android:shadowColor="@color/bg_color_gray"
                    android:shadowDx="1.2"
                    android:shadowDy="1.2"
                    android:shadowRadius="1.5"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/edittext_login_style"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="Confirma Senha"
                    android:textColor="@color/gray_et_top"
                    android:textAlignment="textStart"
                    android:layout_marginLeft="32px"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:gravity="start" />

                <EditText
                    android:hint="@string/txtSenha"
                    android:id="@+id/etCadastroConfirmaSenha"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:shadowRadius="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/edittext_login_style"/>
            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="Código Empresa"
                    android:textColor="@color/gray_et_top"
                    android:textAlignment="textStart"
                    android:layout_marginLeft="32px"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:gravity="start" />

                <EditText
                    android:hint="@string/txtCodEmpresa"
                    android:id="@+id/etCadastroCodEmpresa"
                    android:inputType="number"
                    android:padding="8dp"
                    android:shadowRadius="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/edittext_login_style"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnCadastro"
                android:text="fazer cadastro"
                android:layout_marginTop="32dp"
                android:background="@drawable/blue_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtJaPossuoConta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/txtJaPossuoConta"
                    android:textAlignment="textStart"
                    android:textColor="@color/dark_blue"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="V. 1.0.1 BETA"
                    android:textAlignment="center"
                    android:textColor="@color/bgcolorblue"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="RtlCompat" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>